deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unhook
  labels:
    app: unhook
